# backend

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  lint.yml
backend/: README.md  pyproject.toml
backend/.github/workflows/: ci.yml
backend/src/backend/: settings.py
backend/src/todo/: models.py  views.py
docs/: uv_usage.md
docs/dongyi97/: code.md  github.md
docs/jihwan20/: github.md
docs/nasihyeon/: github.md
docs/seon99il/: code.md  github.md
src/: db.sqlite3-shm  db.sqlite3-wal
src/backend/: settings.py  urls.py
src/common/: base.py  base_async_crawler.py  bs4_util.py  date_util.py  matplotlib_util.py  next_url_setter.py  utils.py
src/common/tests/: test_date_util.py  test_matplotlib_utils.py
src/dramas/: admin.py  episodes_info_crawler.py  models.py  serializers.py  urls.py  views.py
src/dramas/migrations/: 0001_initial.py  0002_drama_episode_count_alter_episodeinfo_drama.py  0003_remove_drama_episode_count_drama_genre.py  0003_remove_drama_episode_count_drama_img_url.py  0004_genre.py  0004_remove_drama_genre_genre.py  0005_alter_episodeinfo_rating.py
src/dramas/tests/: episodes_info_crawler.py  test_crawl_dramas.py  test_dashboard_views.py  test_drama_episodes.py  test_genre_crawler.py  wiki_crawler.py
src/news/: admin.py  crawler.py  models.py  urls.py  views.py
src/news/migrations/: 0001_initial.py  0002_alter_news_options.py  0003_news_drama_ep_alter_news_link_and_more.py
src/news/tests/: test_async.py  (+2 more)
src/templates/: index.html
src/todo/: models.py  serializers.py  tests.py  urls.py  views.py
(+24 files in other folders)
